# multi-layer-perceptron

./: .coveragerc  .gitignore  README.md  prog.py  pyproject.toml
data/: cleaned_data.csv
scripts/: run_mlp.py  run_tests.py
src/: ingest_data.py  logger.py  main.py  mlp.py  node.py  perceptron.py  testing.py  training.py  weight.py
src/classes/: node.py  perceptron.py  text_output.py  weight.py
tests/: test_ingest_data.py  test_node.py  test_weight.py
