[project]
name = "multi-layer-perceptron"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["numpy>=2.4.4", "polars>=1.40.1"]

[project.scripts]
mlp = "scripts.run_mlp:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
