[project]
name = "multi-layer-perceptron"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coloredlogs>=15.0.1",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[project.scripts]
mlp = "scripts.run_mlp:main"
tests = "scripts.run_tests:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
